package refactor; using share protocol to implement api